Implementation de la validation des pièces jointes

--- a/src/main/resources/templates/agent/frm/frm-agent.html
+++ b/src/main/resources/templates/agent/frm/frm-agent.html
@@ -12,7 +12,8 @@
         }
         
         div.panel-default div.panel-heading,
-        div.panel-default div.panel-heading a {
+        div.panel-default div.panel-heading a 
+        {
             /*color:#39B510;*/
             color: #FF9008;
         }
@@ -23,7 +24,8 @@
             color: black;
         }
         
-        form .error-msg {
+        form .error-msg 
+        {
             font-size: 10px;
             font-weight: bolder;
             color: red;
@@ -67,64 +69,27 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script> -->
         <script src="lib/jquery/JQueryBolckUI.js"></script>
+        
+        <script> //==================DEFINITION DE QUELQUES FONCTIONS UTILITAIRES POUR LA VALIDATION DU FORMULAIRE==================
 
-        <script>
-            var today = new Date();
-            var dateNaissMin = new Date(); 
-            var dateNaissMax = new Date(); 
-            var datePriseService1Min = new Date(); 
-            var datePriseService1Max = new Date(); 
-            var frmAgent = $("#frm-agent");
-            var txtEmail = $("#email");
-            var txtNumPiece = $("#numPiece");
-            var txtTel = $("#tel");
-            var txtMatricule = $("#matricule");
-            var agentExistingRestUrl = "http://localhost:8081/staffadmin/exists/";
-
-            datePriseService1Min.setYear(today.getYear() - 50 + 1900);
-            datePriseService1Max = today;
-
-            dateNaissMin.setYear(today.getYear() -80 +1900);
-            dateNaissMax.setYear(today.getYear() -18 +1900);
-
-            function getDateDefaultFormat(date) //dd/mm/yyyy
+            //========================================Retourne la date dans le format dd/mm/yyyy====================================
+            function getDateDefaultFormat(date)
             {
                 return date.getDate() + "/" +(date.getMonth()+1)+"/"+(date.getYear()+1900);
             }
-            
-            checkDate("dateNaissance", dateNaissMin, dateNaissMax, " * "+getDateDefaultFormat(dateNaissMin)+" < date < "+getDateDefaultFormat(dateNaissMax), "dateNaissance-error-msg");
-            checkDate("datePriseService1", dateNaissMin, dateNaissMax, " * "+getDateDefaultFormat(datePriseService1Min)+" < date < "+getDateDefaultFormat(datePriseService1Max), "datePriseService1-error-msg");
+            //======================================================================================================================
 
-            $("#btn-valider").click(function(e) {
-                if (!frmAgent[0].checkValidity()) {
-                    $("#btn-submit").trigger("click");
-                } else {
-                    $("#btn-modal-trigger").trigger("click");
-                }
-            });
-
-            txtEmail.blur(function(e) {
-                unicityChecking("email/", txtEmail, e.target.value, $("#email-error-msg"), "*adresse email déjà utilisée");
-            });
-
-            txtMatricule.blur(function(e) {
-                unicityChecking("matricule/", txtMatricule, e.target.value, $("#matricule-error-msg"), "*matricule déjà utilisé");
-            });
-
-            txtNumPiece.blur(function(e) {
-                unicityChecking("numPiece/", txtNumPiece, e.target.value, $("#numPiece-error-msg"), "*N° déjà utilisé");
-            });
-
-            txtTel.blur(function(e) {
-                unicityChecking("tel/", txtTel, e.target.value, $("#tel-error-msg"), "*Tel déjà utilisé");
-            });
-
-            function switchOnOffBtnValider() 
+            //==========Active ou desactive le boutton de validation du formulaire selon la validité du formulaire==================
+            function switchOnOffBtnValider() //
             {
                 if (
                         $("#email-error-msg").css("display") != "none" || $("#numPiece-error-msg").css("display") != "none" ||
                         $("#tel-error-msg").css("display") != "none" || $("#matricule-error-msg").css("display") != "none" ||
-                        $("#dateNaissance-error-msg").css("display") != "none" || $("#datePriseService1-error-msg").css("display") != "none"
+                        $("#dateNaissance-error-msg").css("display") != "none" || $("#datePriseService1-error-msg").css("display") != "none" ||
+                        $("#noteServiceDAAF-error-msg").css("display") != "none"|| $("#noteServiceDGBF-error-msg").css("display") != "none" ||
+                        $("#certificatService1-error-msg").css("display") != "none"|| $("#arreteNomination-error-msg").css("display") != "none" ||
+                        $("#decisionAttente-error-msg").css("display") != "none" || $("#cv-error-msg").css("display") != "none" ||
+                        $("#pieceIdentite-error-msg").css("display") != "none" || $("#photo-error-msg").css("display") != "none"
                     ) 
                 {
                     $("#btn-valider").attr("disabled", "disabled");
@@ -133,8 +98,10 @@
                 {
                     $("#btn-valider").removeAttr("disabled");
                 }
-            }
+            }     
+            //======================================================================================================================
 
+            //===========================VERIFIE SI LA DATE EST COMPRISE DANS UNE FORCHETTE DONNEE++================================
             function checkDate(inputDateId, dateMin, dateMax, errorMsg, errorMsgId)
             {
                 $("#"+inputDateId).blur(function ()
@@ -153,70 +120,201 @@
                     switchOnOffBtnValider();
                 });
             }
-            /*
-            $("#dateNaissance").blur(function () 
-            { 
-                var dateNaissance = new Date(this.value);
-                var today = new Date();
-                var maxDateNaiss = new Date();
-                maxDateNaiss.setYear(today.getYear() -20 +1900);
-                if(maxDateNaiss < dateNaissance)
-                {
-                    $("#dateNaissance-error-msg").text("Trop jeune");
-                    $("#dateNaissance-error-msg").show("slow");
-                }
-                else
-                {
-                    $("#dateNaissance-error-msg").hide("slow");
-                    $("#dateNaissance-error-msg").css("display","none");
-                }
-                switchOnOffBtnValider();
-            });*/
+            //======================================================================================================================
 
-            function unicityChecking(variant, checkedElmt, checkedValue, errorMsgElmt, errorMsg) {
-                //alert(checkedValue);
+            //==================FAIT DES APPELS AJAX POUR VERIFIER LA NON EXISTENCE DES VALEURS UNIQUES============================
+            function unicityChecking(variant, checkedElmt, checkedValue, errorMsgElmt, errorMsg) 
+            {
                 if(checkedValue != null && checkedValue != "")
                 {
-                    const existingPromise = new Promise((resolve, reject) => {
-                        //document).block();
-                        //$().blockUI();
-                            $.ajax({
+                    const existingPromise = new Promise((resolve, reject) => 
+                    {
+                            $.ajax(
+                            {
                                 type: "get",
                                 url: agentExistingRestUrl + variant + checkedValue,
-                                success: function(response) {
+                                success: function(response) 
+                                {
                                     resolve(response);
-                                    //$.unblockUI();
                                 },
-                                error: function(error) {
+                                error: function(error) 
+                                {
                                     alert(agentExistingRestUrl + variant + checkedValue);
                                     alert("An error occured! Please check your connexion");
                                     reject(error);
-                                    //$.unblockUI();
                                 }
                             });
                         
                     });
+                
+
+                    existingPromise.then((value) => 
+                    {
+                        if (value) 
+                        {
+                            errorMsgElmt.text(errorMsg);
+                            errorMsgElmt.show("slow");
+                        } 
+                        else 
+                        {
+                            errorMsgElmt.hide("slow");
+                            errorMsgElmt.css("display", "none");
+                        }
+                        switchOnOffBtnValider();
+                    }).catch((value) => 
+                    {
+
+                    });
                 }
+            }   
+            //======================================================================================================================  
 
-                existingPromise.then((value) => {
-                    //alert(errorMsg);
-                    if (value) {
-                        errorMsgElmt.text(errorMsg);
-                        errorMsgElmt.show("slow");
-                        //alert(errorMsgElmt.css("display"));
-                        //$("#btn-valider").attr("disabled", "disabled");
-                    } else {
-                        errorMsgElmt.hide("slow");
-                        errorMsgElmt.css("display", "none");
-                    }
+            //=====================================FAIRE LA VALIDATION DES PIECES JOINTES===========================================
+            
+            
+            function checkInputFile(checkedInputFileElmt, authorizeTypesTable, errorMsgId, typeErrorMsg, sizeErrorMsg)
+            {
+                //alert(checkedInputFileElmt.value);
+                var reader = new FileReader();
+                if(checkedInputFileElmt.value == "" ||checkedInputFileElmt.value ==null)
+                {
+                    //alert(checkedInputFileElmt.value);
+                    $("#"+errorMsgId).hide('slow');
+                    $("#"+errorMsgId).css('display', 'none');
                     switchOnOffBtnValider();
-                    //alert(errorMsgElmt.text());
-                    //return value;
-
-                }).catch((value) => {
-
-                });
+                }
+                else
+                {
+                    reader.addEventListener('load', function()
+                    {   
+                            var fileType = checkedInputFileElmt.files[0].type;
+                            var fileSize = checkedInputFileElmt.files[0].size;
+                            //alert(fileType);
+                            if(!authorizeTypesTable.includes(fileType))
+                            {
+                                $("#"+errorMsgId).text(typeErrorMsg);
+                                $("#"+errorMsgId).show('slow');
+                            }
+                            else
+                            {
+                                if(fileSize<1000000)
+                                {
+                                    $("#"+errorMsgId).hide('slow');
+                                    $("#"+errorMsgId).css('display', 'none');
+                                }
+                                else
+                                {
+                                    $("#"+errorMsgId).text(sizeErrorMsg);
+                                    $("#"+errorMsgId).show('slow');
+                                }
+                            }
+                            switchOnOffBtnValider();
+                    });
+                    
+                    reader.readAsText(checkedInputFileElmt.files[0]);
+                    
+                }
             }
+                                   
+        </script>
+
+        <script>//=============================================IMPLEMENTATION DE LA VALIDATION======================================
+            var today = new Date();
+            var dateNaissMin = new Date(); 
+            var dateNaissMax = new Date(); 
+            var datePriseService1Min = new Date(); 
+            var datePriseService1Max = new Date(); 
+            var frmAgent = $("#frm-agent");
+            var txtEmail = $("#email");
+            var txtNumPiece = $("#numPiece");
+            var txtTel = $("#tel");
+            var txtMatricule = $("#matricule");
+            var agentExistingRestUrl = "http://localhost:8081/staffadmin/exists/";
+            var noteServiceDAAFInputFile = document.querySelector("#noteServiceDAAF");
+            var docTypesTable = ["application/pdf", "image/jpeg",""];
+            var imageTypesTable = ["image/jpeg",""];
+            var pdfTypesTable = ["application/pdf"];
+
+            document.querySelector("#noteServiceDAAF").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "noteServiceDAAF-error-msg", " * Document PDF requis", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#noteServiceDGBF").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "noteServiceDGBF-error-msg", " * Document PDF requis", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#certificatService1").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "certificatService1-error-msg", " * Document PDF requis", " * Taille limite = 1Mo" );
+            });
+            
+            document.querySelector("#arreteNomination").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "arreteNomination-error-msg", " * Document PDF requis", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#decisionAttente").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "decisionAttente-error-msg", " * Document PDF requis", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#cv").addEventListener("change", function()
+            {
+                checkInputFile(this, docTypesTable , "cv-error-msg", " * Fichiers autorisés : PDF, JPEG, PNG", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#pieceIdentite").addEventListener("change", function()
+            {
+                checkInputFile(this, pdfTypesTable , "pieceIdentite-error-msg", " * Fichiers autorisé : PDF, JPEG, PNG", " * Taille limite = 1Mo" );
+            });
+
+            document.querySelector("#photo").addEventListener("blur", function()
+            {
+                checkInputFile(this, imageTypesTable , "photo-error-msg", " * Fichiers autorisé : JPEG, PNG", " * Taille limite = 1Mo" );
+            });
+
+            datePriseService1Min.setYear(today.getYear() - 50 + 1900);
+            datePriseService1Max = today;
+
+            dateNaissMin.setYear(today.getYear() -80 +1900);
+            dateNaissMax.setYear(today.getYear() -18 +1900);
+            checkDate("dateNaissance", dateNaissMin, dateNaissMax, " * "+getDateDefaultFormat(dateNaissMin)+" < date < "+getDateDefaultFormat(dateNaissMax), "dateNaissance-error-msg");
+            checkDate("datePriseService1", datePriseService1Min, datePriseService1Max, " * "+getDateDefaultFormat(datePriseService1Min)+" < date < "+getDateDefaultFormat(datePriseService1Max), "datePriseService1-error-msg");
+
+            $("#btn-valider").click(function(e) //Au click sur le bouton valider
+            {
+                if (!frmAgent[0].checkValidity()) //Si le formulaire n'est pas valide (Champ requis non renseigné ou email invalide)
+                {
+                    $("#btn-submit").trigger("click");//Je déclenche la soumission du formulaire pour que HTML5 le bolque et affiche le message correspondant 
+                } 
+                else 
+                {
+                    $("#btn-modal-trigger").trigger("click"); //Si le formulaire est valide, j'affiche la modale recapitulative
+                }
+            });
+
+            //Appel ajax pour vérification d'unicité
+            txtEmail.blur(function(e) 
+            {
+                unicityChecking("email/", txtEmail, e.target.value, $("#email-error-msg"), "*adresse email déjà utilisée");
+            });
+
+            txtMatricule.blur(function(e) 
+            {
+                unicityChecking("matricule/", txtMatricule, e.target.value, $("#matricule-error-msg"), "*matricule déjà utilisé");
+            });
+
+            txtNumPiece.blur(function(e) 
+            {
+                unicityChecking("numPiece/", txtNumPiece, e.target.value, $("#numPiece-error-msg"), "*N° déjà utilisé");
+            });
+
+            txtTel.blur(function(e) 
+            {
+                unicityChecking("tel/", txtTel, e.target.value, $("#tel-error-msg"), "*Tel déjà utilisé");
+            });
         </script>
     </div>
 </body>
