Implémentation de l'enregistrement des pièces jointes

--- a/src/main/resources/templates/agent/frm/frm-agent.html
+++ b/src/main/resources/templates/agent/frm/frm-agent.html
@@ -231,8 +231,8 @@
             var txtMatricule = $("#matricule");
             var agentExistingRestUrl = "http://localhost:8081/staffadmin/exists/";
             var noteServiceDAAFInputFile = document.querySelector("#noteServiceDAAF");
-            var docTypesTable = ["application/pdf", "image/jpeg",""];
-            var imageTypesTable = ["image/jpeg",""];
+            var docTypesTable = ["application/pdf", "image/jpeg","image/png"];
+            var imageTypesTable = ["image/jpeg","image/png"];
             var pdfTypesTable = ["application/pdf"];
 
             document.querySelector("#noteServiceDAAF").addEventListener("change", function()
