--- a/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
+++ b/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
@@ -42,7 +42,7 @@
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-							<button type="submit" class="btn btn-success">Save changes</button>
+							<button type="submit" id="btn-submit-modal" class="btn btn-success">Save changes</button>
 						</div>
 					</div>
 				</div>
