--- a/src/main/resources/templates/fragments/layout/top-bar-frag.html
+++ b/src/main/resources/templates/fragments/layout/top-bar-frag.html
@@ -2,7 +2,7 @@
 <html lang="fr"
 	  xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8"/>
 	</head>
 
         <header class="header orange-bg" th:fragment="top-bar-frag">
