--- a/src/main/resources/templates/agent/frm/frm-agent.html
+++ b/src/main/resources/templates/agent/frm/frm-agent.html
@@ -63,8 +63,7 @@
                 <button type="submit" id="btn-submit" class="btn btn-success btn-lg">Save</button>
             </form>
         </div>
-        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
+<!--    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script> -->
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script> -->
