--- a/src/main/resources/templates/fragments/layout/dependancies.html
+++ b/src/main/resources/templates/fragments/layout/dependancies.html
@@ -33,6 +33,7 @@
             <script class="include" type="text/javascript" src="/lib/jquery.dcjqaccordion.2.7.js"></script>
             <script src="/lib/jquery.scrollTo.min.js"></script>
             <script src="/lib/jquery.nicescroll.js" type="text/javascript"></script>
+            <script type="text/javascript" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script> 
             <!--common script for all pages-->
   		    <script src="/lib/common-scripts.js"></script>              
         </th:block>
