--- a/src/main/resources/templates/unite-admin/unite-admin.html
+++ b/src/main/resources/templates/unite-admin/unite-admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" integrity="sha256-ze/OEYGcFbPRmvCnrSeKbRTtjG4vGLHXgOqsyLFTRjg=" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="/staffadmin/bootstrap-treeview/bootstrap-treeview.min.css"/>
     <style type="text/css">
         div.panel div.panel-heading {
             font-size: 20px;
@@ -47,28 +47,19 @@
 <body>
     <div layout:fragment="content">
         <div class="container-fluid">
-            <form id="frm-agent" th:action="@{/agents/save}" method="post" enctype="multipart/form-data">
-                <div class="alert alert-danger col-lg-12 mb-3" th:if="${errorMsg}">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                    <strong>Erreur de saisie : </strong> 
-                    <div th:text="${errorMsg}"></div>
-                </div>
-                <th:block th:replace="agent/frm/infos-generales-frag.html::infos-generales-frag"></th:block>
-                <th:block th:replace="agent/frm/infos-emploi-frag.html::infos-emploi-frag"></th:block>
-                <th:block th:replace="agent/frm/pieces-jointes-frag.html::pieces-jointes-frag"></th:block>
-                <th:block th:replace="agent/frm/confirmation-modal-frag.html::confirmation-modal-frag"></th:block>
-                <button class="btn btn-success mr-3" id="btn-modal-trigger" type="button" data-toggle="modal" href="#confirmation-modal">Valider</button>
-                <button class="btn btn-success mr-3" id="btn-valider" type="button">Valider btn</button>
-                <button class="btn btn-warning mr-3" id="btn-reset" type="reset">Reset</button>
-                <button type="submit" id="btn-submit" class="btn btn-success btn-lg">Save</button>
-            </form>
+            <th:block th:replace="unite-admin/frm-unite-admin-frag.html::frm-unite-admin-frag"></th:block>
+            <th:block th:replace="unite-admin/list-unites-admins-frag.html::list-unites-admins-frag"></th:block>
         </div>
     </div>
     <div layout:fragment="js-specifics-dependancies">
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
         <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script> -->
         <script src="/lib/jquery/JQueryBolckUI.js"></script>
-        <script src="/staffadmin/js/agent/frm-agent.js"></script>
+        <script src="/staffadmin/bootstrap-treeview/bootstrap-treeview.min.js"></script>
+        <script src="/staffadmin/js/unite-admin/unite-admin.js"></script>
+        <script>
+            $("#unite-admin-tree").treeview({data:uniteAdminDatas});
+        </script>
     </div>
 </body>
 
